[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/mining_tab.gd" id="1"]

[node name="MiningTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HSplit" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="LeftPanel" type="PanelContainer" parent="HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="LeftVBox" type="VBoxContainer" parent="HSplit/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AnimationArea" type="Panel" parent="HSplit/LeftPanel/LeftVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)
tooltip_text = "Blacksmith animation placeholder"

[node name="PlaceholderLabel" type="Label" parent="HSplit/LeftPanel/LeftVBox/AnimationArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -12.0
offset_right = 80.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "⚒ Blacksmith ⚒"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 20

[node name="MineProgress" type="ProgressBar" parent="HSplit/LeftPanel/LeftVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 30)
value = 0.0

[node name="MineButton" type="Button" parent="HSplit/LeftPanel/LeftVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
text = "⛏ Mine!"
theme_override_font_sizes/font_size = 32

[node name="PowerLabel" type="Label" parent="HSplit/LeftPanel/LeftVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Mining Power: 1.0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="RightPanel" type="PanelContainer" parent="HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="RightVBox" type="VBoxContainer" parent="HSplit/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="OreTitle" type="Label" parent="HSplit/RightPanel/RightVBox"]
layout_mode = 2
text = "Owned Ores"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="OreScroll" type="ScrollContainer" parent="HSplit/RightPanel/RightVBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 100)

[node name="OreList" type="VBoxContainer" parent="HSplit/RightPanel/RightVBox/OreScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Sep" type="HSeparator" parent="HSplit/RightPanel/RightVBox"]
layout_mode = 2

[node name="ProbTitle" type="Label" parent="HSplit/RightPanel/RightVBox"]
layout_mode = 2
text = "Ore Drop Rates"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="ProbScroll" type="ScrollContainer" parent="HSplit/RightPanel/RightVBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 100)

[node name="ProbList" type="VBoxContainer" parent="HSplit/RightPanel/RightVBox/ProbScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
